<resources>

    <string name="app_name">DemoProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">DemoProject</string>
    <string name="empty_description"></string>
    
    <string name="http_get">http_get请求</string>
    <string name="http_post">http_post请求</string>
    
    <!-- color&drawable diff -->
    <color name="red_test">#ff0000</color>
    <drawable name="red_test">#ff0000</drawable>

    <!--  set background color  -->
    <string name="colordisplay_set_layout">设置布局颜色</string>
    <string name="colordisplay_set_text">设置文本颜色</string>
    <string name="colordisplay_show">效果演示</string>
    <string name="colordisplay_content">我是什么颜色?%s</string>

    <!-- handling runtime changes -->
    <string name="runtime_changes">我的测试结果是：%1s</string>
    <string name="increase">加+1</string>
    <string name="decrease">减-1</string>
    
    <!-- graphic camera 3d act-->
    <string name="camera_descri">Hello World, ActCamera3D!</string>
    <!-- act_rotate -->
    <string name="act_rotate">XYZ轴旋转（单位：角度, 范围0~360 degree ）</string>
    <string name="rotate_X_axis">X轴：</string>
    <string name="rotate_Y_axis">Y轴：</string>
    <string name="rotate_Z_axis">Z轴：</string>
    <!-- act_sknew -->
    <string name="act_sknew">XY轴倾斜</string>
    <string name="skew_X_axis">X轴：</string>
    <string name="skew_Y_axis">Y轴：</string>
    <string name="skew_Z_axis">Z轴：</string>
    <!-- act_scale -->
    <string name="act_scale">Z轴缩放</string>
    <string name="scale_X_axis">X轴：</string>
    <string name="scale_Y_axis">Y轴：</string>
    <string name="scale_Z_axis">Z轴：</string>
</resources>