<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_descri" />
    
    <!-- rotate -->
    <TextView
        android:id="@+id/textActRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_rotate" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textRotateX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_X_axis" />
        <SeekBar
            android:id="@+id/seekBarRotateX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textRotateY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_Y_axis" />
        <SeekBar
            android:id="@+id/seekBarRotateY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textRotateZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_Z_axis" />
        <SeekBar
            android:id="@+id/seekBarRotateZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <!-- sknew -->
    <TextView
        android:id="@+id/textActSknew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_sknew" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textSkewX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skew_X_axis" />
        <SeekBar
            android:id="@+id/seekBarSknewX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textSkewY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_Y_axis" />
        <SeekBar
            android:id="@+id/seekBarSknewY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <!-- scale -->
    <TextView
        android:id="@+id/textActScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_scale" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical" >
        <TextView
            android:id="@+id/textScaleZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_Z_axis" />
        <SeekBar
            android:id="@+id/seekBarScaleZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/imgSrc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apress2x_src" />
        <ImageView
            android:id="@+id/imgResult"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apress2x_ret" />
    </LinearLayout>

</LinearLayout>
