<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runtime_changes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="150dip"
        android:layout_marginLeft="30dip"
        android:text="@string/increase" />
    
    <Button
        android:id="@+id/button_decrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="150dip"
        android:layout_marginLeft="120dip"
        android:text="@string/decrease" />

</FrameLayout>