<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="25dp"
        android:text="@string/colordisplay_set_layout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView1"
        android:layout_alignBottom="@id/textView1"
        android:layout_marginLeft="84dp"
        android:layout_toRightOf="@id/textView1"
        android:text="@string/colordisplay_set_text" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_below="@id/textView1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView2"
        android:layout_alignTop="@id/spinner1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/spinner1"
        android:layout_below="@id/spinner1"
        android:layout_marginTop="21dp"
        android:text="@string/colordisplay_show" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="23dp"
        android:layout_alignLeft="@id/textView3"
        android:layout_below="@id/textView3" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/colordisplay_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</RelativeLayout>